# xfce4-xapp-status-plugin

./: .gitignore  makepot  meson.build  meson_options.txt  xfce4-xapp-status-plugin.pot
debian/: changelog  control  rules  xfce4-xapp-status-plugin.install
plugin/: configure.glade  meson.build  org.x.apps.xfce4-status-plugin.gschema.xml  status-icon.c  status-icon.h  xapp-status-plugin.c  xapp-status-plugin.desktop.in  xapp-status-plugin.h
po/: LINGUAS  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  ber.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fr_CA.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  (+48 more)
